# multimedia-video-modify-orientation

./: CMakeLists.txt  Main.qml  README.md  RotatedVideoItem.qml  appconfig.cpp  appconfig.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rotationfiltersink.cpp  rotationfiltersink.h
qvideowidgetdesignerplugin/: CMakeLists.txt  README.md  qvideowidgetdesignerplugin.cpp  qvideowidgetdesignerplugin.h
